@@ -1,15 +1,16 @@
 package youngcapital.hotel.JavaBackendHotel.controller;
 
-import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.Optional;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import youngcapital.hotel.JavaBackendHotel.domain.Customer;
 import youngcapital.hotel.JavaBackendHotel.domain.Reservation;
 import youngcapital.hotel.JavaBackendHotel.domain.Room;
+
+import java.time.LocalDate;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
 
 @Service
 public class ReservationService {
@@ -28,9 +29,13 @@ public class ReservationService {
 	}
 
 	public void saveReservation(Reservation reservation) {
+
+		//Part of the below code is to create links to Room in Reservation
+		
 		//Room r = reservation.getRooms().get(0);
 		//Optional<Room> optional = roomRepository.findById(r.getId());
-		//reservation.setRooms(Arrays.asList(optional.get()) );
+		//reservation.setRooms(List.of(optional.get()));
+
 		rr.save(reservation);
 	}
 
@@ -50,6 +55,11 @@ public class ReservationService {
 		rr.save(reservation);
 		
 		return reservation.getId();
+	}
+
+	public Iterable<Reservation> getReservationsByDate(){
+		System.out.println(rr.reservations());
+		return(rr.reservations());
 	}
 
 	public void deleteReservation(long reservationid) {
